--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,5 +5,5 @@
   <label>E-mail</label>
   <%= f.text_field :email %>
   <br/>
-  <%= f.submit 'Create' %>
+  <%= f.submit(form_action) %>
 <% end %>
