--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,13 @@
+<h1> User <%= user.id %> </h1>
 <div>
-  <h1>Name</h1>
+  <h2>Name</h2>
   <%= user.name %>
 </div>
 <div>
-  <h1>E-mail</h1>
+  <h2>E-mail</h2>
   <%= user.email %>
+</div>
+<div>
+  <br/>
+  <%= link_to('Edit', edit_user_path(user)) %>
 </div>
