--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,12 +1,35 @@
-<%= form_for(ticket) do |f| %>
-  <label>Title</label>
-  <%= f.text_field :title %>
-  <br/>
-  <label>Description</label>
-  <%= f.text_area :description, size: "100x10" %>
-  <br/>
-  <label>Assignee</label>
-  <%= f.text_field :assignee_id %>
-  <br/>
-  <%= f.submit(form_action) %>
+<h1> Create/Edit a Ticket </h1>
+<%= form_for(ticket, html: { class: 'form-horizontal' }) do |f| %>
+<div class="form-group">
+  <div class="col-sm-2">
+    <label>Title</label>
+  </div>
+  <div class="col-sm-10">
+    <%= f.text_field :title %>
+  </div>
+</div>
+
+<div class="form-group">
+  <div class="col-sm-2">
+    <label>Description</label>
+  </div>
+  <div class="col-sm-10">
+    <%= f.text_area :description, size: "100x10" %>
+  </div>
+</div>
+
+<div class="form-group">
+  <div class="col-sm-2">
+    <label>Assignee</label>
+  </div>
+  <div class="col-sm-10">
+    <%= f.collection_select :assignee_id, users_plus_nobody(users), :id, :name %>
+  </div>
+</div>
+
+<div class="form-group">
+  <div class="col-sm-12">
+    <%= f.submit(form_action, class: 'btn btn-primary btn-lg') %>
+  </div>
+</div>
 <% end %>
