--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,33 @@
-<%= form_for(user) do |f| %>
-  <label>Name</label>
-  <%= f.text_field :name %>
-  <br/>
-  <label>E-mail</label>
-  <%= f.text_field :email %>
-  <br/>
-  <%= f.submit(form_action) %>
+<div class="row">
+  <div class="col-sm-12">
+    <h2> Create/Edit a User </h2>
+  </div>
+</div>
+
+<%= form_for(user, html: { class: 'form-horizontal' }) do |f| %>
+<div class="form-group">
+  <div class="col-sm-2">
+    <label>Name</label>
+  </div>
+  <div class="col-sm-10">
+    <%= f.text_field :name %>
+  </div>
+</div>
+
+
+<div class="form-group">
+  <div class="col-sm-2">
+    <label>E-mail</label>
+  </div>
+  <div class="col-sm-10">
+    <%= f.text_field :email %>
+  </div>
+</div>
+
+<div class="form-group">
+  <div class="col-sm-12">
+    <%= f.submit(form_action, class: 'btn btn-primary btn-lg' ) %>
+  </div>
+</div>
+
 <% end %>
