add some chrome for simpler navigation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,18 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Sample Application</a>
+    </div>
+
+    <ul class="nav navbar-nav">
+      <li><%= link_to('Tickets', tickets_path) %></li>
+      <li><%= link_to('Users', users_path) %></li>
+    </ul>
+  </div>
+</nav>
 
 <div class="container">
   <%= yield %>
